--- a/polocloud-master/pom.xml
+++ b/polocloud-master/pom.xml
@@ -30,19 +30,19 @@
             <groupId>de.polocloud.api</groupId>
             <artifactId>polocloud-api</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>de.polocloud.database</groupId>
             <artifactId>polocloud-database</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>de.polocloud.logger</groupId>
             <artifactId>polocloud-logger</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.EsotericSoftware</groupId>
