--- a/polocloud-bootstrap/pom.xml
+++ b/polocloud-bootstrap/pom.xml
@@ -16,4 +16,22 @@
     <maven.compiler.target>8</maven.compiler.target>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>de.polocloud.api</groupId>
+      <artifactId>polocloud-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>de.polocloud.master</groupId>
+      <artifactId>polocloud-master</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>de.polocloud.wrapper</groupId>
+      <artifactId>polocloud-wrapper</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
 </project>
