--- a/polocloud-wrapper/pom.xml
+++ b/polocloud-wrapper/pom.xml
@@ -11,6 +11,14 @@
 
   <groupId>de.polocloud.wrapper</groupId>
   <artifactId>polocloud-wrapper</artifactId>
+  <dependencies>
+    <dependency>
+      <groupId>de.polocloud.api</groupId>
+      <artifactId>polocloud-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
