--- a/polocloud-bootstrap/pom.xml
+++ b/polocloud-bootstrap/pom.xml
@@ -14,6 +14,7 @@
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
@@ -30,6 +31,11 @@
     <dependency>
       <groupId>de.polocloud.wrapper</groupId>
       <artifactId>polocloud-wrapper</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>de.polocloud.logger</groupId>
+      <artifactId>polocloud-logger</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
