--- a/polocloud-api/pom.xml
+++ b/polocloud-api/pom.xml
@@ -39,7 +39,11 @@
       <artifactId>guice</artifactId>
       <version>5.0.1</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.7</version>
+    </dependency>
   </dependencies>
 
 </project>
