--- a/polocloud-wrapper/pom.xml
+++ b/polocloud-wrapper/pom.xml
@@ -23,6 +23,11 @@
           <artifactId>commons-io</artifactId>
           <version>2.5</version>
       </dependency>
+    <dependency>
+      <groupId>de.polocloud.logger</groupId>
+      <artifactId>polocloud-logger</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <properties>
