--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
       <module>polocloud-bootstrap</module>
         <module>polocloud-plugin</module>
         <module>polocloud-setup</module>
+        <module>polocloud-updater-client</module>
+      <module>polocloud-updater-server</module>
     </modules>
 
     <properties>
