recode of polocloud-plugin

--- a/polocloud-plugin/src/main/resources/plugin.yml
+++ b/polocloud-plugin/src/main/resources/plugin.yml
@@ -2,4 +2,4 @@ name: PoloCloud-Plugin
 version: 1.0.0
 author: Max_DE
 
-main: de.polocloud.plugin.spigot.PoloCloudPlugin
+main: de.polocloud.plugin.bootstrap.SpigotBootstrap
