--- a/polocloud-plugin/src/main/resources/bungee.yml
+++ b/polocloud-plugin/src/main/resources/bungee.yml
@@ -2,4 +2,4 @@ name: PoloCloud-Plugin
 version: 1.0.0
 author: Max_DE
 
-main: de.polocloud.plugin.bungee.PoloCloudPlugin
+main: de.polocloud.plugin.bootstrap.ProxyBootstrap
