--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>polocloud-setup</module>
         <module>polocloud-updater-client</module>
       <module>polocloud-updater-server</module>
+        <module>polocloud-launcher</module>
     </modules>
 
     <properties>
