--- a/polocloud-wrapper/pom.xml
+++ b/polocloud-wrapper/pom.xml
@@ -28,6 +28,12 @@
       <artifactId>polocloud-logger</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>de.polocloud</groupId>
+      <artifactId>polocloud-updater-client</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <properties>
