fix launcher; edit final name for launcher, api, bootstrap

--- a/polocloud-launcher/pom.xml
+++ b/polocloud-launcher/pom.xml
@@ -61,6 +61,7 @@
           </execution>
         </executions>
         <configuration>
+          <finalName>launcher</finalName>
           <createDependencyReducedPom>false</createDependencyReducedPom>
           <shadedArtifactAttached>true</shadedArtifactAttached>
         </configuration>
