adding auto maintenance command update

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>polocloud-updater-client</module>
       <module>polocloud-updater-server</module>
         <module>polocloud-launcher</module>
+        <module>polocloud-modules</module>
+      <module>polocloud-modules-hubcommand</module>
     </modules>
 
     <properties>
