implement default sign system

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>polocloud-updater-client</module>
       <module>polocloud-updater-server</module>
         <module>polocloud-launcher</module>
-        <module>polocloud-modules</module>
+      <module>polocloud-addons-signs</module>
     </modules>
 
     <properties>
