--- a/polocloud-modules/polocloud-hubcommnad-module/pom.xml
+++ b/polocloud-modules/polocloud-hubcommnad-module/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>polocloud-test-module</artifactId>
+  <artifactId>polocloud-hubcommand-module</artifactId>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
@@ -19,6 +19,12 @@
     <dependency>
       <groupId>de.polocloud.api</groupId>
       <artifactId>polocloud-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>de.polocloud.master</groupId>
+      <artifactId>polocloud-master</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
