--- a/polocloud-master/pom.xml
+++ b/polocloud-master/pom.xml
@@ -30,7 +30,7 @@
       <groupId>de.polocloud.database</groupId>
       <artifactId>polocloud-database</artifactId>
       <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
+      <scope>compilew</scope>
     </dependency>
     <dependency>
       <groupId>de.polocloud.logger</groupId>
