--- a/polocloud-modules/polocloud-whitelist-module/pom.xml
+++ b/polocloud-modules/polocloud-whitelist-module/pom.xml
@@ -3,28 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>PoloCloudv1</artifactId>
+    <artifactId>polocloud-modules</artifactId>
     <groupId>de.polocloud</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>polocloud-modules</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-    <module>polocloud-hubcommnad-module</module>
-      <module>polocloud-party-module</module>
-      <module>polocloud-notify-module</module>
-      <module>polocloud-whitelist-module</module>
-  </modules>
+  <groupId>de.polocloud.module.whitelist</groupId>
+  <artifactId>polocloud-whitelist-module</artifactId>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
   </properties>
-
-
-
-
 
 </project>
