--- a/polocloud-addons/adons-signs/pom.xml
+++ b/polocloud-addons/adons-signs/pom.xml
@@ -6,11 +6,12 @@
     <artifactId>PoloCloudv1</artifactId>
     <groupId>de.polocloud</groupId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>de.polocloud.addons.signs</groupId>
-  <artifactId>polocloud-addons-signs</artifactId>
+  <artifactId>adons-signs</artifactId>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
