--- a/polocloud-updater-server/pom.xml
+++ b/polocloud-updater-server/pom.xml
@@ -55,6 +55,12 @@
       <version>3.13.9</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>de.polocloud.api</groupId>
+      <artifactId>polocloud-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
 </project>
