--- a/polocloud-updater-server/pom.xml
+++ b/polocloud-updater-server/pom.xml
@@ -56,6 +56,12 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.10.5</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>de.polocloud.api</groupId>
       <artifactId>polocloud-api</artifactId>
       <version>1.0-SNAPSHOT</version>
