--- a/polocloud-addons/polocloud-addons-signs/pom.xml
+++ b/polocloud-addons/polocloud-addons-signs/pom.xml
@@ -3,15 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>PoloCloudv1</artifactId>
-    <groupId>de.polocloud</groupId>
+    <artifactId>polocloud-addons</artifactId>
+    <groupId>de.polocloud.addons</groupId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>de.polocloud.addons.signs</groupId>
-  <artifactId>adons-signs</artifactId>
+  <artifactId>polocloud-adons-signs</artifactId>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
