implement attribute system at tab layout

--- a/polocloud-addons/polocloud-addons-signs/src/main/resources/plugin.yml
+++ b/polocloud-addons/polocloud-addons-signs/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: CloudSigns
 version: 1.0
 author: HttpMarco
-main: de.polocloud.signs.bootstrap.Bootstrap
+main: de.polocloud.signs.bootstrap.SignBootstrap
 commands:
   cloudsigns:
