bugfix join packet encoding

--- a/polocloud-addons/polocloud-addons-signs/src/main/resources/plugin.yml
+++ b/polocloud-addons/polocloud-addons-signs/src/main/resources/plugin.yml
@@ -2,5 +2,7 @@ name: CloudSigns
 version: 1.0
 author: HttpMarco
 main: de.polocloud.signs.bootstrap.SignBootstrap
+depend:
+    - PoloCloud-Plugin
 commands:
-  cloudsings:
+  cloudsigns:
