--- a/polocloud-addons/polocloud-addons-signs/pom.xml
+++ b/polocloud-addons/polocloud-addons-signs/pom.xml
@@ -10,7 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>de.polocloud.addons.signs</groupId>
-  <artifactId>polocloud-adons-signs</artifactId>
+  <artifactId>polocloud-addons-signs</artifactId>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
