bugfix sign system and features

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <module>polocloud-launcher</module>
     <module>polocloud-modules</module>
     <module>polocloud-addons</module>
+      <module>polocloud-modules/polocloud-permission-module</module>
   </modules>
 
   <properties>
