--- a/polocloud-bootstrap/pom.xml
+++ b/polocloud-bootstrap/pom.xml
@@ -9,7 +9,9 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
+  <groupId>de.polocloud.bootstrap</groupId>
   <artifactId>polocloud-bootstrap</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
@@ -59,11 +61,6 @@
     <dependency>
       <groupId>de.polocloud.logger</groupId>
       <artifactId>polocloud-logger</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>de.polocloud</groupId>
-      <artifactId>polocloud-updater-client</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
