--- a/polocloud-updater-server/pom.xml
+++ b/polocloud-updater-server/pom.xml
@@ -9,7 +9,9 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
+  <groupId>de.polocloud.updater.server</groupId>
   <artifactId>polocloud-updater-server</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
