--- a/polocloud-modules/polocloud-permission-module/pom.xml
+++ b/polocloud-modules/polocloud-permission-module/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>PoloCloud</artifactId>
+    <artifactId>polocloud-modules</artifactId>
     <groupId>de.polocloud</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>de.polocloud.permissions</groupId>
+  <groupId>de.polocloud.modules.permissions</groupId>
   <artifactId>polocloud-permission-module</artifactId>
   <version>1.0-SNAPSHOT</version>
 
