--- a/polocloud-modules/polocloud-proxy-module/pom.xml
+++ b/polocloud-modules/polocloud-proxy-module/pom.xml
@@ -3,14 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>PoloCloud</artifactId>
+    <artifactId>polocloud-modules</artifactId>
     <groupId>de.polocloud</groupId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
+  <groupId>de.polocloud.modules.proxy</groupId>
   <artifactId>polocloud-proxy-module</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
