--- a/polocloud-modules/pom.xml
+++ b/polocloud-modules/pom.xml
@@ -9,11 +9,13 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
+  <groupId>de.polocloud.modules</groupId>
   <artifactId>polocloud-modules</artifactId>
   <packaging>pom</packaging>
+  <version>1.0-SNAPSHOT</version>
+
   <modules>
     <module>polocloud-hubcommand-module</module>
-    <module>polocloud-party-module</module>
     <module>polocloud-notify-module</module>
     <module>polocloud-tablist-module</module>
     <module>polocloud-permission-module</module>
