--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,9 @@
     </plugins>
   </build>
 
+  <dependencies>
+  </dependencies>
+
   <distributionManagement>
     <snapshotRepository>
       <id>polocloud</id>
