--- a/polocloud-plugin/src/main/resources/bungee.yml
+++ b/polocloud-plugin/src/main/resources/bungee.yml
@@ -1,5 +1,4 @@
 name: PoloCloud-Plugin
 version: 1.0.0
 author: Max_DE
-
-main: de.polocloud.plugin.bootstrap.ProxyBootstrap
+main: de.polocloud.plugin.bootstrap.proxy.ProxyBootstrap
