--- a/polocloud-plugin/src/main/resources/plugin.yml
+++ b/polocloud-plugin/src/main/resources/plugin.yml
@@ -1,8 +1,4 @@
 name: PoloCloud-Plugin
 version: 1.0.0
 author: Max_DE
-
-main: de.polocloud.plugin.bootstrap.SpigotBootstrap
-
-commands:
-    testCloud:
+main: de.polocloud.plugin.bootstrap.spigot.SpigotBootstrap
