--- a/polocloud-bootstrap/pom.xml
+++ b/polocloud-bootstrap/pom.xml
@@ -19,6 +19,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>polocloud</id>
+      <url>https://polocloud.de:8443/repository/maven-snapshots/</url>
+    </repository>
+  </repositories>
+
   <build>
     <plugins>
       <plugin>
@@ -64,9 +71,9 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>de.polocloud</groupId>
+      <groupId>de.polocloud.updater.client</groupId>
       <artifactId>polocloud-updater-client</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0-20210810.070111-1</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
