--- a/polocloud-launcher/pom.xml
+++ b/polocloud-launcher/pom.xml
@@ -11,6 +11,13 @@
 
   <artifactId>polocloud-launcher</artifactId>
 
+  <repositories>
+    <repository>
+      <id>polocloud</id>
+      <url>https://polocloud.de:8443/repository/maven-snapshots/</url>
+    </repository>
+  </repositories>
+
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
@@ -71,9 +78,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>de.polocloud</groupId>
+      <groupId>de.polocloud.updater.client</groupId>
       <artifactId>polocloud-updater-client</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0-20210810.070111-1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
