--- a/polocloud-api/pom.xml
+++ b/polocloud-api/pom.xml
@@ -52,6 +52,11 @@
       <artifactId>gson</artifactId>
       <version>2.8.7</version>
     </dependency>
+      <dependency>
+          <groupId>com.esotericsoftware.reflectasm</groupId>
+          <artifactId>reflectasm</artifactId>
+          <version>1.05</version>
+      </dependency>
   </dependencies>
 
 </project>
