Fixes - Code cleanup - Added devMode option to CloudInit.java for the Wrapper.java and Wrapper.checkPoloCloudAPI - Added new Updater in Launcher.java and in Wrapper.java, start the update server on you own machine or change the IP of the PoloCloudUpdater. Also the old methods Wrapper.checkPoloCloudAPINative and Launcher.checkForUpdatesNative are not deleted - Added PoloCloud-Client Dependency in pom.xml of the Wrapper and the launcher - Added a handful of comments - Added a 5 seconds wait before stopping the system when the netty thread was stopped

--- a/polocloud-launcher/pom.xml
+++ b/polocloud-launcher/pom.xml
@@ -90,5 +90,11 @@
       <version>2.8.7</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>de.polocloud</groupId>
+      <artifactId>polocloud-client</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
   </dependencies>
 </project>
