--- a/polocloud-master/pom.xml
+++ b/polocloud-master/pom.xml
@@ -38,5 +38,10 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>de.polocloud</groupId>
+      <artifactId>polocloud-client</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
