--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <module>polocloud-bootstrap</module>
     <module>polocloud-launcher</module>
     <module>polocloud-plugin</module>
+    <module>polocloud-modules</module>
+    <module>polocloud-modules/example-module</module>
   </modules>
 
   <properties>
