--- a/polocloud-master/pom.xml
+++ b/polocloud-master/pom.xml
@@ -37,5 +37,11 @@
       <artifactId>polocloud-client</artifactId>
       <version>1.0-20210831.073753-1</version>
     </dependency>
+      <dependency>
+          <groupId>de.polocloud</groupId>
+          <artifactId>polocloud-client</artifactId>
+          <version>1.0-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 </project>
