--- a/polocloud-wrapper/pom.xml
+++ b/polocloud-wrapper/pom.xml
@@ -42,6 +42,12 @@
       <version>1.0-20210831.073753-1</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>de.polocloud</groupId>
+          <artifactId>polocloud-client</artifactId>
+          <version>1.0-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <properties>
