--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
     <module>polocloud-plugin</module>
     <module>polocloud-modules</module>
     <module>polocloud-modules/permissions-module</module>
-      <module>polocloud-database</module>
+    <module>polocloud-modules/sign-module</module>
+    <module>polocloud-database</module>
   </modules>
 
   <repositories>
