Started InternalWrapper - Module

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>polocloud-modules</module>
     <module>polocloud-modules/permissions-module</module>
     <module>polocloud-modules/sign-module</module>
+    <module>polocloud-modules/internalwrapper-module</module>
     <module>polocloud-database</module>
   </modules>
 
