--- a/polocloud-bootstrap/pom.xml
+++ b/polocloud-bootstrap/pom.xml
@@ -19,13 +19,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <repositories>
-    <repository>
-      <id>polocloud</id>
-      <url>https://polocloud.de:8443/repository/maven-snapshots/</url>
-    </repository>
-  </repositories>
-
   <build>
     <plugins>
       <plugin>
@@ -71,9 +64,9 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>de.polocloud.client</groupId>
-      <artifactId>polocloud-client</artifactId>
-      <version>1.0-20210831.073753-1</version>
+      <groupId>de.polocloud.updater.client</groupId>
+      <artifactId>polocloud-updater-client</artifactId>
+      <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
