--- a/polocloud-master/pom.xml
+++ b/polocloud-master/pom.xml
@@ -33,15 +33,10 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>de.polocloud.client</groupId>
-      <artifactId>polocloud-client</artifactId>
-      <version>1.0-20210831.073753-1</version>
+      <groupId>de.polocloud.updater.client</groupId>
+      <artifactId>polocloud-updater-client</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
     </dependency>
-      <dependency>
-          <groupId>de.polocloud</groupId>
-          <artifactId>polocloud-client</artifactId>
-          <version>1.0-SNAPSHOT</version>
-          <scope>compile</scope>
-      </dependency>
   </dependencies>
 </project>
