--- a/polocloud-modules/internalwrapper-module/pom.xml
+++ b/polocloud-modules/internalwrapper-module/pom.xml
@@ -3,13 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>PoloCloud</artifactId>
-    <groupId>de.polocloud</groupId>
+    <artifactId>polocloud-modules</artifactId>
+    <groupId>de.polocloud.modules</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
+  <groupId>de.polocloud.modules.internalwrapper</groupId>
   <artifactId>internalwrapper-module</artifactId>
+  <version>1.0-SNAPSHOT</version>
   <dependencies>
     <dependency>
       <groupId>de.polocloud.api</groupId>
