--- a/polocloud-modules/pom.xml
+++ b/polocloud-modules/pom.xml
@@ -7,9 +7,19 @@
     <groupId>de.polocloud</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
 
+  <modelVersion>4.0.0</modelVersion>
+  <packaging>pom</packaging>
+
+  <groupId>de.polocloud.modules</groupId>
   <artifactId>polocloud-modules</artifactId>
+  <version>1.0-SNAPSHOT</version>
+
+  <modules>
+    <module>sign-module</module>
+    <module>permissions-module</module>
+    <module>internalwrapper-module</module>
+  </modules>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
