--- a/polocloud-updater/pom.xml
+++ b/polocloud-updater/pom.xml
@@ -3,28 +3,27 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>polocloud-modules</artifactId>
-    <groupId>de.polocloud.modules</groupId>
+    <artifactId>PoloCloud</artifactId>
+    <groupId>de.polocloud</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
 
-  <groupId>de.polocloud.modules.permissions</groupId>
-  <artifactId>permissions-module</artifactId>
+  <modelVersion>4.0.0</modelVersion>
+  <packaging>pom</packaging>
+
+  <groupId>de.polocloud.updater</groupId>
+  <artifactId>polocloud-updater</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <dependencies>
-    <dependency>
-      <groupId>de.polocloud.api</groupId>
-      <artifactId>polocloud-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>polocloud-client</module>
+    <module>polocloud-server</module>
+  </modules>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
 </project>
