--- a/polocloud-wrapper/pom.xml
+++ b/polocloud-wrapper/pom.xml
@@ -12,13 +12,6 @@
   <groupId>de.polocloud.wrapper</groupId>
   <artifactId>polocloud-wrapper</artifactId>
 
-  <repositories>
-    <repository>
-      <id>polocloud</id>
-      <url>https://polocloud.de:8443/repository/maven-snapshots/</url>
-    </repository>
-  </repositories>
-
   <dependencies>
     <dependency>
       <groupId>de.polocloud.api</groupId>
@@ -37,17 +30,11 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>de.polocloud.client</groupId>
-      <artifactId>polocloud-client</artifactId>
-      <version>1.0-20210831.073753-1</version>
+      <groupId>de.polocloud.updater.client</groupId>
+      <artifactId>polocloud-updater-client</artifactId>
+      <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
-      <dependency>
-          <groupId>de.polocloud</groupId>
-          <artifactId>polocloud-client</artifactId>
-          <version>1.0-SNAPSHOT</version>
-          <scope>compile</scope>
-      </dependency>
   </dependencies>
 
   <properties>
