--- a/polocloud-modules/proxy-module/pom.xml
+++ b/polocloud-modules/proxy-module/pom.xml
@@ -9,22 +9,23 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
 
-  <groupId>de.polocloud.modules</groupId>
-  <artifactId>polocloud-modules</artifactId>
+  <groupId>de.polocloud.modules.proxy</groupId>
+  <artifactId>proxy-module</artifactId>
   <version>1.0-SNAPSHOT</version>
-
-  <modules>
-    <module>sign-module</module>
-    <module>permissions-module</module>
-    <module>internalwrapper-module</module>
-    <module>proxy-module</module>
-  </modules>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>de.polocloud.api</groupId>
+      <artifactId>polocloud-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 
 </project>
