--- a/polocloud-api/pom.xml
+++ b/polocloud-api/pom.xml
@@ -79,6 +79,12 @@
       <version>2.14.6</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.7</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
 </project>
