--- a/polocloud-modules/proxy-module/src/main/resources/plugin.yml
+++ b/polocloud-modules/proxy-module/src/main/resources/plugin.yml
@@ -1,1 +1,5 @@
-name:
+name: PoloCloud-SyncProxy
+version: 1.0
+author: HttpMarco
+main: de.polocloud.modules.proxy.bootstrap.ProxyPluginBootstrap
+depend: PoloCloud-Plugin
