--- a/polocloud-modules/permissions-module/src/main/resources/plugin.yml
+++ b/polocloud-modules/permissions-module/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-    name: SpigotSidePermissionModule
+    name: PoloCloud-Permissions
     main: de.polocloud.modules.permission.pluginside.SpigotBootstrap
     version: 1.0
     depend:
