Added NPCs Module and general fixes
(NPC-Module) WIP (Work in Progress)!
- Added the general mechanics of the NPC System

(General)
- Optimizations

--- a/polocloud-modules/pom.xml
+++ b/polocloud-modules/pom.xml
@@ -20,6 +20,7 @@
     <module>permissions-module</module>
     <module>proxy-module</module>
     <module>example-module</module>
+    <module>npc-module</module>
   </modules>
 
   <properties>
