Fixed bugs in the NPC Module - Added more aliases to the "cloudnpcs" Command

--- a/polocloud-modules/npc-module/src/main/resources/plugin.yml
+++ b/polocloud-modules/npc-module/src/main/resources/plugin.yml
@@ -7,3 +7,7 @@ main: de.polocloud.npcs.bootstraps.PluginBootstrap
 
 commands:
     cloudnpcs:
+        aliases:
+            - npc
+            - npcs
+            - cloudnpc
