Optimizations in the Code - Replaced deprecated usages with legacy usage - Removed unused imports - Optimized .yml Files of Bungeecord and Spigot - Fixed spelling mistakes - Removed unnecessary lines and semicolons - Replaced things with lambada

--- a/polocloud-modules/sign-module/src/main/resources/plugin.yml
+++ b/polocloud-modules/sign-module/src/main/resources/plugin.yml
@@ -9,4 +9,8 @@ depend:
     - PoloCloud-Plugin
 commands:
     cloudsigns:
+        aliases:
+            - sign
+            - signs
+            - cloudsign
         description: Command for managing the Signs for the PoloCloud
