--- a/polocloud-modules/permissions-module/src/main/resources/bungee.yml
+++ b/polocloud-modules/permissions-module/src/main/resources/bungee.yml
@@ -1,5 +1,5 @@
     name: PoloCloud-Permissions
     main: de.polocloud.modules.permission.pluginside.ProxyBootstrap
-    version: 1.0
+    version: "1.0"
     depends:
         - PoloCloud-Plugin
