--- a/polocloud-modules/proxy-module/src/main/resources/plugin.yml
+++ b/polocloud-modules/proxy-module/src/main/resources/plugin.yml
@@ -2,4 +2,5 @@ name: PoloCloud-SyncProxy
 version: 1.0
 author: HttpMarco
 main: de.polocloud.modules.proxy.bootstrap.ProxyPluginBootstrap
-depend: PoloCloud-Plugin
+depend:
+    - PoloCloud-Plugin
