--- a/polocloud-modules/proxy-module/pom.xml
+++ b/polocloud-modules/proxy-module/pom.xml
@@ -40,6 +40,12 @@
       <type>jar</type>
       <scope>provided</scope>
     </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
 </project>
