--- a/polocloud-modules/proxy-module/pom.xml
+++ b/polocloud-modules/proxy-module/pom.xml
@@ -24,9 +24,20 @@
       <id>bungeecord-repo</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </repository>
+
+      <repository>
+        <id>velocity</id>
+        <url>https://nexus.velocitypowered.com/repository/maven-public/</url>
+      </repository>
   </repositories>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.velocitypowered</groupId>
+      <artifactId>velocity-api</artifactId>
+      <version>3.0.0</version>
+    </dependency>
     <dependency>
       <groupId>de.polocloud.api</groupId>
       <artifactId>polocloud-api</artifactId>
