--- a/polocloud-modules/hubcommand-module/src/main/resources/bungee.yml
+++ b/polocloud-modules/hubcommand-module/src/main/resources/bungee.yml
@@ -1,4 +1,4 @@
 name: PoloCloud-HubCommand
 version: "1.0"
 author: HttpMarco
-main: de.polocloud.modules.hubcommand.bootstrap.HubCommandProxyBootstrap
+main: de.polocloud.modules.hubcommand.pluginside.bootstrap.BungeeBootstrap
