First Implementation of PoloCloud Webinterface Module

--- a/polocloud-modules/pom.xml
+++ b/polocloud-modules/pom.xml
@@ -24,6 +24,7 @@
     <module>hubcommand-module</module>
     <module>smartproxy-module</module>
     <module>serverselector-module</module>
+      <module>webinterface</module>
   </modules>
 
   <properties>
