Fixed double connecting of GameServers when executing "/rl"

--- a/polocloud-modules/sign-module/src/main/resources/plugin.yml
+++ b/polocloud-modules/sign-module/src/main/resources/plugin.yml
@@ -1,8 +1,6 @@
 name: PoloCloud-Signs
 version: 1.0
-authors:
-    - PoloCloud
-    - iPommes
+author: iPommes
 main: de.polocloud.signs.bootstraps.PluginBootstrap
 
 depend:
